<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="12dp"
    android:orientation="vertical"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:id="@+id/layoutId"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:id="@+id/premiseName_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/premise_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/premiseType_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/premiseName_lbl"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/premise_type"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/visiting_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="64dp"
            android:gravity="end"
            android:text="@string/visiting_count_text"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitNow_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visiting_count"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="35dp"
            android:text="@string/visits_now"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="35dp"
            android:text="@string/slash"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitorAllowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="25dp"
            android:gravity=""
            android:text="@string/visitorAllowed"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="2dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="1.5"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="0.5"
            android:progressBackgroundTint="@color/light_blue"
            android:progressTint="@color/white"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>

